welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:3: error: not found: value poseBrosse
poseBrosse()
^Source:4: error: value * is not a member of Unit
avance()*4 
        ^