welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
droite()
poseBrosse()
avance()*4